[package]
name = "io-queue-rdma"
version = "0.1.0"
edition = "2018"

[dependencies]
rdma-cm = {git = "https://github.com/akshayknarayan/rdma-cm", branch = "async", features = ["async"]}
#rdma-cm = { path = "../rdma-cm", features = ["async"] }
tracing = "0.1.26"
nix = "0.23"
arrayvec = "0.7.1"
futures = "0.3.16"
async-channel = "1.6.1"
hashbrown = "0.3"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.19"
libc = "0.2.77"
utilities = { path = "./utilities"}
